--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -1,4 +1,31 @@
 ---
+- name: README.md header
+  blockinfile:
+    path: "{{ pkg_dir }}/{{ package_name }}/README.md"
+    insertbefore: BOF
+    marker: "<!-- {mark} HEADER -->"
+    block: |
+      # {{ package_name }} – {{ package_description }}
+
+      | **Documentation**                        | **Build Status**                                             |
+      |:----------------------------------------:|:------------------------------------------------------------:|
+      | [![][docs-stable-img]][docs-stable-url]  | [![][tests-img]][tests-url] [![][codecov-img]][codecov-url]  |
+
+- name: README.md footer
+  blockinfile:
+    path: "{{ pkg_dir }}/{{ package_name }}/README.md"
+    insertafter: EOF
+    marker: "<!-- {mark} FOOTER -->"
+    block: |
+      [docs-stable-img]: https://img.shields.io/badge/docs-stable-blue.svg
+      [docs-stable-url]: https://homalg-project.github.io/{{ package_name }}/doc/chap0.html
+
+      [tests-img]: https://github.com/homalg-project/{{ package_name }}/workflows/Tests/badge.svg
+      [tests-url]: https://github.com/homalg-project/{{ package_name }}/actions?query=workflow%3ATests
+
+      [codecov-img]: https://codecov.io/gh/homalg-project/{{ package_name }}/branch/master/graph/badge.svg
+      [codecov-url]: https://codecov.io/gh/homalg-project/{{ package_name }}
+
 - name: init.g header
   replace:
     path: "{{ pkg_dir }}/{{ package_name }}/init.g"
