--- a/site.yml
+++ b/site.yml
@@ -14,6 +14,15 @@
           - CAP_project
           - InfiniteLists
           - GradedCategories
+        ci_ubuntu_additional_apt_packages:
+          - texlive-fonts-extra
+        additional_latex_preamble: |
+          \usepackage{bbm}
+          \DeclareUnicodeCharacter{1D7D9}{\ensuremath{\mathbbm{1}}}
+          \DeclareUnicodeCharacter{03C3}{\ensuremath{\sigma}}
+          \DeclareUnicodeCharacter{03C1}{\ensuremath{\rho}}
+          \DeclareUnicodeCharacter{03BD}{\ensuremath{\nu}}
+          \DeclareUnicodeCharacter{03C7}{\ensuremath{\chi}}
     - import_tasks: tasks/package.yml
       vars:
         package_name: GradedCategories
@@ -23,6 +32,8 @@
           - CAP_project
           - InfiniteLists
           - InternalModules
+        ci_ubuntu_additional_apt_packages:
+          - texlive-fonts-extra
     - import_tasks: tasks/package.yml
       vars:
         package_name: FinSetsForCAP
