--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -1,4 +1,19 @@
 ---
+- name: Check if GitHub Pages are available for this project
+  uri:
+    url: https://homalg-project.github.io/{{ package_name }}/PackageInfo.g
+  register: gh_pages_response
+  failed_when: gh_pages_response.status is not defined
+  check_mode: no
+
+- name: Set URL with GitHub Pages
+  import_tasks: tasks/urls_with_gh_pages.yml
+  when: gh_pages_response.status == 200
+
+- name: Set URL without GitHub Pages
+  import_tasks: tasks/urls_without_gh_pages.yml
+  when: gh_pages_response.status != 200
+
 - name: PackageInfo.g PackageName
   lineinfile:
     path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
@@ -17,18 +32,6 @@
     path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
     regexp: "Date :="
     line: 'Date := Concatenation( ~.Version{[ 9, 10 ]}, "/", ~.Version{[ 6, 7 ]}, "/", ~.Version{[ 1 .. 4 ]} ),'
-
-- name: PackageInfo.g SourceRepository.URL
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "^    URL := "
-    line: '    URL := Concatenation( "https://github.com/homalg-project/", ~.PackageName ),'
-
-- name: PackageInfo.g PackageWWWHome
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "PackageWWWHome  := "
-    line: 'PackageWWWHome  := Concatenation( "https://homalg-project.github.io/", ~.PackageName ),'
 
 - name: PackageInfo.g PackageDoc.BookName
   lineinfile:
