FinSetsForCAP needs some additional packages

--- a/site.yml
+++ b/site.yml
@@ -39,4 +39,6 @@
         package_name: FinSetsForCAP
         package_description: "The elementary topos of (skeletal) finite sets"
         ci_additional_packages:
+          - homalg_project
           - CAP_project
+          - Toposes
