--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -6,186 +6,11 @@
   failed_when: gh_pages_response.status is not defined
   check_mode: no
 
-- name: Set URL with GitHub Pages
-  import_tasks: tasks/urls_with_gh_pages.yml
-  when: gh_pages_response.status == 200
+- import_tasks: tasks/ci.yml
+  vars:
+    pdf_doc_packages: "{{ [] if gh_pages_response.status == 200 else [ {'package_name': package_name} ] }}"
 
-- name: Set URL without GitHub Pages
-  import_tasks: tasks/urls_without_gh_pages.yml
-  when: gh_pages_response.status != 200
-
-- name: PackageInfo.g PackageName
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "PackageInfo :="
-    line: 'PackageName := "{{ package_name }}",'
-
-- name: PackageInfo.g License
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "License :="
-    line: 'License := "GPL-2.0-or-later",'
-    insertafter: "Date :="
-
-- name: PackageInfo.g Date
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "Date :="
-    line: 'Date := Concatenation( ~.Version{[ 9, 10 ]}, "/", ~.Version{[ 6, 7 ]}, "/", ~.Version{[ 1 .. 4 ]} ),'
-
-- name: PackageInfo.g PackageDoc.BookName
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "^  BookName  := "
-    line: '  BookName  := "{{ package_name }}",'
-
-- name: PackageInfo.g PackageDoc.LongTitle
-  lineinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "^  LongTitle := "
-    line: '  LongTitle := "{{ package_description }}",'
-
-- name: README.md header
-  blockinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/README.md"
-    insertbefore: BOF
-    marker: "<!-- {mark} HEADER -->"
-    block: "{{ lookup('template', 'templates/README.md_HEADER.j2') }}"
-
-- name: README.md footer
-  blockinfile:
-    path: "{{ pkg_dir }}/{{ package_name }}/README.md"
-    insertafter: EOF
-    marker: "<!-- {mark} FOOTER -->"
-    block: "{{ lookup('template', 'templates/README.md_FOOTER.j2') }}"
-
-- name: init.g header
-  replace:
-    path: "{{ pkg_dir }}/{{ package_name }}/init.g"
-    regexp: "\\A(.*\n){5}"
-    replace: |
-      #
-      # {{ package_name }}: {{ package_description }}
-      #
-      # Reading the declaration part of the package.
-      #
-
-- name: read.g header
-  replace:
-    path: "{{ pkg_dir }}/{{ package_name }}/read.g"
-    regexp: "\\A(.*\n){5}"
-    replace: |
-      #
-      # {{ package_name }}: {{ package_description }}
-      #
-      # Reading the implementation part of the package.
-      #
-
-- name: PackageInfo.g header
-  replace:
-    path: "{{ pkg_dir }}/{{ package_name }}/PackageInfo.g"
-    regexp: "\\A(.*\n){8}"
-    replace: |
-      #
-      # {{ package_name }}: {{ package_description }}
-      #
-      # This file contains package meta data. For additional information on
-      # the meaning and correct usage of these fields, please consult the
-      # manual of the "Example" package as well as the comments in its
-      # PackageInfo.g file.
-      #
-
-- name: "{{ item }} header"
-  replace:
-    path: "{{ item }}"
-    regexp: "\\A(.*\n){5}"
-    replace: |
-      #
-      # {{ package_name }}: {{ package_description }}
-      #
-      # Declarations
-      #
-  with_fileglob: "{{ pkg_dir }}/{{ package_name }}/gap/*.gd"
-
-- name: "{{ item }} header"
-  replace:
-    path: "{{ item }}"
-    regexp: "\\A(.*\n){5}"
-    replace: |
-      #
-      # {{ package_name }}: {{ package_description }}
-      #
-      # Implementations
-      #
-  with_fileglob: "{{ pkg_dir }}/{{ package_name }}/gap/*.gi"
-
-- name: 000_LoadPackage.tst
-  template:
-    src: 000_LoadPackage.tst.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/tst/000_LoadPackage.tst"
-
-- name: LICENSE
-  template:
-    src: LICENSE.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/LICENSE"
-
-- name: makedoc.g
-  template:
-    src: makedoc.g.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/makedoc.g"
-    trim_blocks: false
-
-- name: makedoc_with_overfull_hbox_warnings.g
-  template:
-    src: makedoc_with_overfull_hbox_warnings.g.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/makedoc_with_overfull_hbox_warnings.g"
-    trim_blocks: false
-
-- name: "Ensure {{ pkg_dir }}/{{ package_name }}/doc/ exists"
-  file:
-    path: "{{ pkg_dir }}/{{ package_name }}/doc/"
-    state: directory
-
-- name: Doc.autodoc
-  copy:
-    src: Doc.autodoc
-    dest: "{{ pkg_dir }}/{{ package_name }}/doc/Doc.autodoc"
-    force: no
-
-- name: clean
-  copy:
-    src: clean
-    dest: "{{ pkg_dir }}/{{ package_name }}/doc/clean"
-    mode: a+x
-
-- name: makefile
-  template:
-    src: makefile.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/makefile"
-
-- name: testall.g
-  template:
-    src: testall.g.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/tst/testall.g"
-
-- name: "Ensure {{ pkg_dir }}/{{ package_name }}/.github/workflows/ exists"
-  file:
-    path: "{{ pkg_dir }}/{{ package_name }}/.github/workflows/"
-    state: directory
-    recurse: yes
-
-- name: Tests.yml
-  template:
-    src: Tests.yml.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/.github/workflows/Tests.yml"
-    trim_blocks: false
-
-- name: .codecov.yml
-  template:
-    src: .codecov.yml.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/.codecov.yml"
-
-- name: .gitignore
-  template:
-    src: .gitignore.j2
-    dest: "{{ pkg_dir }}/{{ package_name }}/.gitignore"
+- import_tasks: tasks/package_common.yml
+  vars:
+    package_path: "{{ package_name }}"
+    has_gh_pages: "{{ gh_pages_response.status == 200 }}"
