--- a/tasks/urls_with_gh_pages.yml
+++ b/tasks/urls_with_gh_pages.yml
@@ -3,16 +3,16 @@
   lineinfile:
     path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
     regexp: "PackageWWWHome  := "
-    line: 'PackageWWWHome  := "https://homalg-project.github.io/{{ package_name }}",'
+    line: 'PackageWWWHome  := "https://homalg-project.github.io/{{ package_path }}",'
 
 - name: PackageInfo.g PackageInfoURL (with GitHub Pages)
   lineinfile:
     path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
     regexp: "PackageInfoURL  :="
-    line: 'PackageInfoURL  := "https://homalg-project.github.io/{{ package_name }}/PackageInfo.g",'
+    line: 'PackageInfoURL  := "https://homalg-project.github.io/{{ package_path }}/PackageInfo.g",'
 
 - name: PackageInfo.g README_URL (with GitHub Pages)
   lineinfile:
     path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
     regexp: "README_URL      :="
-    line: 'README_URL      := "https://homalg-project.github.io/{{ package_name }}/README.md",'
+    line: 'README_URL      := "https://homalg-project.github.io/{{ package_path }}/README.md",'
