--- a/tasks/package.yml
+++ b/tasks/package.yml
@@ -1,16 +1,20 @@
 ---
 - name: Check if GitHub Pages are available for this project
   uri:
-    url: https://homalg-project.github.io/{{ package_name }}/PackageInfo.g
+    url: https://homalg-project.github.io/{{ package.name }}/PackageInfo.g
   register: gh_pages_response
   failed_when: gh_pages_response.status is not defined
   check_mode: no
 
+- name: Set package_enriched
+  set_fact:
+    package_enriched: "{{ package | combine( { 'path': package.name, 'has_gh_pages': gh_pages_response.status == 200 } ) }}"
+
 - import_tasks: tasks/ci.yml
   vars:
-    pdf_doc_packages: "{{ [] if gh_pages_response.status == 200 else [ {'package_name': package_name} ] }}"
+    package: "{{ package_enriched }}"
+    pdf_doc_packages: "{{ [] if gh_pages_response.status == 200 else [ package ] }}"
 
 - import_tasks: tasks/package_common.yml
   vars:
-    package_path: "{{ package_name }}"
-    has_gh_pages: "{{ gh_pages_response.status == 200 }}"
+    package: "{{ package_enriched }}"
