--- a/tasks/package_common.yml
+++ b/tasks/package_common.yml
@@ -1,105 +1,105 @@
 ---
 - name: PackageInfo.g PackageName
   lineinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "PackageInfo :="
-    line: 'PackageName := "{{ package_name }}",'
+    line: 'PackageName := "{{ package.name }}",'
 
 - name: PackageInfo.g Subtitle
   lineinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "Subtitle :="
-    line: 'Subtitle := "{{ package_description }}",'
+    line: 'Subtitle := "{{ package.description }}",'
 
 - name: PackageInfo.g License
   lineinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "License :="
     line: 'License := "GPL-2.0-or-later",'
     insertafter: "Date :="
 
 - name: PackageInfo.g Date
   lineinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "Date :="
     line: 'Date := Concatenation( ~.Version{[ 9, 10 ]}, "/", ~.Version{[ 6, 7 ]}, "/", ~.Version{[ 1 .. 4 ]} ),'
 
 - name: PackageInfo.g URLs
   blockinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     marker: "# {mark} URLS"
     block: |
       SourceRepository := rec(
           Type := "git",
-      {% if meta_package_name is defined %}
-          URL := "https://github.com/homalg-project/{{ meta_package_name }}",
+      {% if meta_package is defined %}
+          URL := "https://github.com/homalg-project/{{ meta_package.name }}",
       {% else %}
-          URL := "https://github.com/homalg-project/{{ package_name }}",
+          URL := "https://github.com/homalg-project/{{ package.name }}",
       {% endif %}
       ),
       IssueTrackerURL := Concatenation( ~.SourceRepository.URL, "/issues" ),
-      {% if has_gh_pages %}
-      PackageWWWHome  := "https://homalg-project.github.io/{{ package_path }}",
-      PackageInfoURL  := "https://homalg-project.github.io/{{ package_path }}/PackageInfo.g",
-      README_URL      := "https://homalg-project.github.io/{{ package_path }}/README.md",
+      {% if package.has_gh_pages %}
+      PackageWWWHome  := "https://homalg-project.github.io/{{ package.path }}",
+      PackageInfoURL  := "https://homalg-project.github.io/{{ package.path }}/PackageInfo.g",
+      README_URL      := "https://homalg-project.github.io/{{ package.path }}/README.md",
       {% else %}
-      {% if meta_package_name is defined %}
-      PackageWWWHome  := "https://github.com/homalg-project/{{ meta_package_name }}/tree/master/{{ package_name }}",
-      PackageInfoURL  := "https://raw.githubusercontent.com/homalg-project/{{ meta_package_name }}/master/{{ package_name }}/PackageInfo.g",
-      README_URL      := "https://raw.githubusercontent.com/homalg-project/{{ meta_package_name }}/master/{{ package_name }}/README.md",
+      {% if meta_package is defined %}
+      PackageWWWHome  := "https://github.com/homalg-project/{{ meta_package.name }}/tree/master/{{ package.name }}",
+      PackageInfoURL  := "https://raw.githubusercontent.com/homalg-project/{{ meta_package.name }}/master/{{ package.name }}/PackageInfo.g",
+      README_URL      := "https://raw.githubusercontent.com/homalg-project/{{ meta_package.name }}/master/{{ package.name }}/README.md",
       {% else %}
-      PackageWWWHome  := "https://github.com/homalg-project/{{ package_name }}",
-      PackageInfoURL  := "https://raw.githubusercontent.com/homalg-project/{{ package_name }}/master/PackageInfo.g",
-      README_URL      := "https://raw.githubusercontent.com/homalg-project/{{ package_name }}/master/README.md",
+      PackageWWWHome  := "https://github.com/homalg-project/{{ package.name }}",
+      PackageInfoURL  := "https://raw.githubusercontent.com/homalg-project/{{ package.name }}/master/PackageInfo.g",
+      README_URL      := "https://raw.githubusercontent.com/homalg-project/{{ package.name }}/master/README.md",
       {% endif %}
       {% endif %}
-      {% if meta_package_name is defined -%}
-        ArchiveURL      := Concatenation( "https://github.com/homalg-project/{{ meta_package_name }}/releases/download/{{ package_name }}-", ~.Version, "/{{ package_name }}-", ~.Version ),
+      {% if meta_package is defined -%}
+        ArchiveURL      := Concatenation( "https://github.com/homalg-project/{{ meta_package.name }}/releases/download/{{ package.name }}-", ~.Version, "/{{ package.name }}-", ~.Version ),
       {% else -%}
-        ArchiveURL      := Concatenation( "https://github.com/homalg-project/{{ package_name }}/releases/download/v-", ~.Version, "/{{ package_name }}-", ~.Version ),
+        ArchiveURL      := Concatenation( "https://github.com/homalg-project/{{ package.name }}/releases/download/v-", ~.Version, "/{{ package.name }}-", ~.Version ),
       {% endif %}
 
 - name: PackageInfo.g PackageDoc.BookName
   lineinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "^  BookName  := "
-    line: '  BookName  := "{{ package_name }}",'
+    line: '  BookName  := "{{ package.name }}",'
 
 - name: PackageInfo.g PackageDoc.LongTitle
   lineinfile:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "^  LongTitle := "
-    line: '  LongTitle := "{{ package_description }}",'
+    line: '  LongTitle := "{{ package.description }}",'
 
 - name: init.g header
   replace:
-    path: "{{ pkg_dir }}/{{ package_path }}/init.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/init.g"
     regexp: "\\A(.*\n){5}"
     replace: |
       #
-      # {{ package_name }}: {{ package_description }}
+      # {{ package.name }}: {{ package.description }}
       #
       # Reading the declaration part of the package.
       #
 
 - name: read.g header
   replace:
-    path: "{{ pkg_dir }}/{{ package_path }}/read.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/read.g"
     regexp: "\\A(.*\n){5}"
     replace: |
       #
-      # {{ package_name }}: {{ package_description }}
+      # {{ package.name }}: {{ package.description }}
       #
       # Reading the implementation part of the package.
       #
 
 - name: PackageInfo.g header
   replace:
-    path: "{{ pkg_dir }}/{{ package_path }}/PackageInfo.g"
+    path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "\\A(.*\n){8}"
     replace: |
       #
-      # {{ package_name }}: {{ package_description }}
+      # {{ package.name }}: {{ package.description }}
       #
       # This file contains package meta data. For additional information on
       # the meaning and correct usage of these fields, please consult the
@@ -113,11 +113,11 @@
     regexp: "\\A(.*\n){5}"
     replace: |
       #
-      # {{ package_name }}: {{ package_description }}
+      # {{ package.name }}: {{ package.description }}
       #
       # Declarations
       #
-  with_fileglob: "{{ pkg_dir }}/{{ package_path }}/gap/*.gd"
+  with_fileglob: "{{ pkg_dir }}/{{ package.path }}/gap/*.gd"
   loop_control:
     loop_var: cur_path
 
@@ -127,72 +127,72 @@
     regexp: "\\A(.*\n){5}"
     replace: |
       #
-      # {{ package_name }}: {{ package_description }}
+      # {{ package.name }}: {{ package.description }}
       #
       # Implementations
       #
-  with_fileglob: "{{ pkg_dir }}/{{ package_path }}/gap/*.gi"
+  with_fileglob: "{{ pkg_dir }}/{{ package.path }}/gap/*.gi"
   loop_control:
     loop_var: cur_path
 
-- name: "Ensure {{ pkg_dir }}/{{ package_path }}/tst/ exists"
+- name: "Ensure {{ pkg_dir }}/{{ package.path }}/tst/ exists"
   file:
-    path: "{{ pkg_dir }}/{{ package_path }}/tst/"
+    path: "{{ pkg_dir }}/{{ package.path }}/tst/"
     state: directory
 
 - name: 000_LoadPackage.tst
   template:
     src: 000_LoadPackage.tst.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/tst/000_LoadPackage.tst"
+    dest: "{{ pkg_dir }}/{{ package.path }}/tst/000_LoadPackage.tst"
 
 - name: LICENSE
   template:
     src: LICENSE.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/LICENSE"
+    dest: "{{ pkg_dir }}/{{ package.path }}/LICENSE"
 
 - name: makedoc.g
   template:
     src: makedoc.g.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/makedoc.g"
+    dest: "{{ pkg_dir }}/{{ package.path }}/makedoc.g"
     trim_blocks: false
 
 - name: makedoc_with_overfull_hbox_warnings.g
   template:
     src: makedoc_with_overfull_hbox_warnings.g.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/makedoc_with_overfull_hbox_warnings.g"
+    dest: "{{ pkg_dir }}/{{ package.path }}/makedoc_with_overfull_hbox_warnings.g"
     trim_blocks: false
 
-- name: "Ensure {{ pkg_dir }}/{{ package_path }}/doc/ exists"
+- name: "Ensure {{ pkg_dir }}/{{ package.path }}/doc/ exists"
   file:
-    path: "{{ pkg_dir }}/{{ package_path }}/doc/"
+    path: "{{ pkg_dir }}/{{ package.path }}/doc/"
     state: directory
 
 - name: Doc.autodoc
   copy:
     src: Doc.autodoc
-    dest: "{{ pkg_dir }}/{{ package_path }}/doc/Doc.autodoc"
+    dest: "{{ pkg_dir }}/{{ package.path }}/doc/Doc.autodoc"
     force: no
 
 - name: clean
   copy:
     src: clean
-    dest: "{{ pkg_dir }}/{{ package_path }}/doc/clean"
+    dest: "{{ pkg_dir }}/{{ package.path }}/doc/clean"
     mode: a+x
 
 - name: makefile
   template:
     src: makefile.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/makefile"
+    dest: "{{ pkg_dir }}/{{ package.path }}/makefile"
 
 - name: testall.g
   template:
     src: testall.g.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/tst/testall.g"
+    dest: "{{ pkg_dir }}/{{ package.path }}/tst/testall.g"
 
 - name: .gitignore
   template:
     src: .gitignore.j2
-    dest: "{{ pkg_dir }}/{{ package_path }}/.gitignore"
+    dest: "{{ pkg_dir }}/{{ package.path }}/.gitignore"
 
 - import_tasks: tasks/README.md.yml
   vars:
