--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,28 @@
 ---
+- name: FunctorCategories
+  hosts: FunctorCategories
+  connection: local
+  vars:
+    pkg_dir: "~/.gap/pkg/"
+    ansible_python_interpreter: "{{ansible_playbook_python}}"
+  tasks:
+    - import_tasks: tasks/package.yml
+      vars:
+        package:
+          name: FunctorCategories
+          description: "Categories of functors"
+          additional_latex_preamble: |
+            \usepackage{mathtools}
+        ci_additional_packages_to_clone:
+          - homalg_project
+          - CAP_project
+          - HigherHomologicalAlgebra
+          - QPA2
+          - Algebroids
+          - CategoryConstructor
+        ci_ubuntu_additional_apt_packages:
+          - texlive-fonts-extra
+
 - name: InternalModules
   hosts: InternalModules
   connection: local
