--- a/site.yml
+++ b/site.yml
@@ -183,6 +183,35 @@
         ci_ubuntu_additional_apt_packages:
           - texlive-fonts-extra
 
+- name: CatReps
+  hosts: CatReps
+  connection: local
+  vars:
+    pkg_dir: "~/.gap/pkg/"
+    ansible_python_interpreter: "{{ansible_playbook_python}}"
+  tasks:
+    - import_tasks: tasks/package.yml
+      vars:
+        package:
+          name: CatReps
+          description: "Representations and cohomology of finite categories"
+          doc_additional_latex_preamble: |
+            \usepackage{mathtools}
+          tests_only_basic: true
+        ci_additional_packages_to_clone:
+          - homalg_project
+          - CAP_project
+          - CategoryConstructor
+          - HigherHomologicalAlgebra
+          - QPA2
+          - Algebroids
+          - Toposes
+          - FinSetsForCAP
+          - FunctorCategories
+          - SubcategoriesForCAP
+        ci_ubuntu_additional_apt_packages:
+          - texlive-fonts-extra
+
 - name: InternalModules
   hosts: InternalModules
   connection: local
