--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,41 @@
 ---
+- name: LazyCategories
+  hosts: LazyCategories
+  connection: local
+  vars:
+    pkg_dir: "~/.gap/pkg/"
+    ansible_python_interpreter: "{{ansible_playbook_python}}"
+  tasks:
+    - import_tasks: tasks/package.yml
+      vars:
+        package:
+          name: LazyCategories
+          description: "Construct an equivalent lazy category out of a CAP category"
+          doc_additional_latex_preamble: |
+            \usepackage{mathtools}
+          tests_additional_packages_to_load:
+            - LinearAlgebraForCAP
+            - GeneralizedMorphismsForCAP
+            - FreydCategoriesForCAP
+            - Algebroids
+          tests_only_basic: true
+        ci_additional_packages_to_clone:
+          - homalg_project
+          - CAP_project
+          - Toposes
+          - CategoryConstructor
+          - SubcategoriesForCAP
+          - Locales
+          - ZariskiFrames
+          - Algebroids
+          - FinSetsForCAP
+          - HigherHomologicalAlgebra
+          - QPA2
+        ci_additional_packages_to_test:
+          - Locales
+        ci_ubuntu_additional_apt_packages:
+          - texlive-fonts-extra
+
 - name: Toposes
   hosts: Toposes
   connection: local
